Make sure 'Card deleted' is not visible when deleting a card and closing a panel

--- a/scss/components-tab-panel.scss
+++ b/scss/components-tab-panel.scss
@@ -15,12 +15,20 @@
     // This is so that when we are fading from one panel to another we don't
     // have a moment along the way where both panels are translucent and the
     // background shows through.
-    //
-    // Technically, we shouldn't do this for the case when we are hiding all
-    // panels (e.g. to return to the homescreen) since it means we don't fade
-    // out. That's easily fixable (by adding a separate class for that case) but
-    // currently it seems fine to just snap closed in that case.
     transition-timing-function: step-end;
+
+    // However, we shouldn't do this for the case when we are hiding all
+    // panels (e.g. to return to the homescreen).
+    &.-allhidden {
+      // We should fade out this case too but currently when we delete a card,
+      // we immediately update the view to say "Card deleted" and if you see
+      // that while it's fading out it looks a bit odd. We'll probably fix that
+      // by simply making it select the next card in the "working set" once we
+      // introduce that concept, but for now we just make the transition snap
+      // back to the home page.
+      transition-timing-function: step-start;
+    }
+
     // Revert browser display:none style
     display: block;
   }
